cleanup batch: perf, dead code, rename, tests, docs
- Perf: reuse H3Core singleton in ExtractTrips; broadcast h3RegionMapping in
  mapToH3 join; replace RDD round-trip in getStays with typed Dataset.flatMap.
- Dead code: drop SampleJob, MySuite, h3Indexer, and commented blocks in
  Main/Pipelines/build.sbt. Main now takes input/output/parquet paths as args.
- Rename lowercase objects (dataLoadFilter, locationType, extractTrips, etc.)
  to PascalCase; internal only — no effect on pipelines.PyEntryPoint surface.
- Fix inverted UNIT_TEST env parsing in runModeFromEnv.
- Add real tests (GeoDistanceSpec, StayDetectionSpec, PyEntryPointSpec) with
  munit + forked JVM + JDK 17 module opens for Spark 3.5.
- README: drop stale root-dir JAR claim; document update.sh / release.yml /
  version lockstep; add Python-integration section.
- New docs/py4j-contract.md formalizes the eight PyEntryPoint methods as the
  only supported Python-facing surface; covered by reflection check in
  PyEntryPointSpec.
- Reset SparkConfig.json to modest defaults (4 cores / 4g / 1g offheap).
- gitignore non-README markdown so planning/follow-up notes stay local;
  docs/**/*.md exempt.